add div page & container

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <title>Floating Cards</title>
 </head>
 <body>
-    
+
+    <div class="page">
+
+        <div class="container">
+            
+        </div>
+
+    </div>
 </body>
 </html>
