add header & main

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Riccardo Pinto Classe#100">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="https://previews.123rf.com/images/fokaspokas/fokaspokas1806/fokaspokas180600526/103144999-team-group-icon-white-icon-with-shadow-on-transparent-background.jpg">
     <title>Floating Cards</title>
 </head>
@@ -14,7 +17,27 @@
     <div class="page">
 
         <div class="container">
-            
+            <header>
+                <h1>
+                    Meet our Team
+                </h1>
+            </header>
+
+            <main>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In perferendis ut aliquam quod neque, delectus rem consequuntur voluptatibus quas illo a harum hic quam eos cumque assumenda. Esse, eaque quam?</p>
+
+                <div class="column">
+
+                    <div class="card">
+                        <img src="img/male1.png" alt="">
+                        <h3>Marco Bianchi</h3>
+                        <span> Designer</span>
+                        <a href="#">marcobianchi@team.com</a>
+
+                    </div>
+
+                </div>
+            </main>
         </div>
 
     </div>
