--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Floating Cards</title>
 </head>
 <body>
-    <!-- page floating cards -->
+    <!-- page floating  main card -->
     <div class="page">
         <!-- container content -->
         <div class="container">
